# rata

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.specs/adr/: 001-rust-core-with-python-and-typescript-bindings.md  002-repository-folder-architecture.md
.specs/issues/: 001-repository-review-follow-ups.md  002-privacy-review-defects.md
.specs/requirements/: 001-dataset-stats.md
.specs/spikes/train-diffusion-model-rust/: README.md
crates/rata-core/: Cargo.toml
crates/rata-core/src/: lib.rs
crates/rata-core/src/diffusion/: linear.rs  mod.rs  preprocess.rs  schedule.rs
docs/: README.md  analyze-datasets.md  architecture.md  automatic-stats-report.md  commands.md  getting-started.md  privacy-review.md  reports.md  repository-review.md  synthetic-data.md  synthetic-evaluation-results-current.json  synthetic-evaluation-results-current.md  synthetic-evaluation-results.json  synthetic-evaluation-results.md
docs/reports/: cars_json.json  cars_json.md  iris_csv.json  iris_csv.md  news_headlines_jsonl.json  news_headlines_jsonl.md  userdata1_avro.json  userdata1_avro.md  userdata1_parquet.json  userdata1_parquet.md
models/: iris.df.json
scripts/: README.md  download-large-test-datasets.ps1  download-test-datasets.ps1  evaluate-synthetic-generators.ps1  generate-stats-reports.ps1
