[package]
name = "rata-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
apache-avro = { version = "0.21", features = ["snappy"] }
arrow-array = "57.0"
arrow-schema = "57.0"
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
parquet = "57.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.18"
